# rpo-2024-Mironov

backend/: pom.xml
fclient/app/: build.gradle.kts
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.kt
fclient/app/src/main/java/ru/iu3/fclient/ui/: PinpadActivity.kt
fclient/app/src/main/java/ru/iu3/fclient/utils/: Common.kt  CryptUtils.kt  HttpClient.kt  TransactionEvents.kt
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: strings.xml  themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
